<resources>
    <string name="hello_name">LoginDemo</string>
    <string name="app_name">TokenBrowser</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be > 1 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_not_exists">Error username or password!</string>
    <!-- nav interfaces -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Token Browser</string>
    <string name="nav_header_subtitle">SHENZHEN CALINMETER CO,.LTD</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="log_out">Log out</string>
    <!-- nav items and appBar text -->
    <string name="menu_home">Home</string>
    <string name="menu_management">Management</string>
    <string name="menu_token_reading">Browse Token</string>
    <string name="menu_token_import">Import Token</string>
    <!-- home fragment -->
    <string name="default_home_text">The main function of this software is to simply manage token.\n1.Login account is divided into main account and ordinary account (account authority is fixed).\n2.You can import and save all kinds of token,The specific operation is in the \'Excel Import\' interface.\n3.You can view the imported token according to the conditions,The specific ration is in the \'Query\' interface.</string>
    <!-- management fragment -->
    <string name="user_sn">SN</string>
    <string name="user_id">user ID</string>
    <string name="user_role">role</string>
    <string name="user_time">created time</string>
    <string name="tab_text_1">Create User</string>
    <string name="tab_text_2">Modify User</string>
    <string name="tab_text_3">Delete User</string>
    <string name="tab_text_4">Change Password</string>
    <!-- management tab card -->
    <string name="select_username">Click to select user in \'UserList\'.</string>
    <string name="new_username">Please enter a new username.</string>
    <string name="old_password">Please enter the old password.</string>
    <string name="new_password">Please enter a new password.</string>
    <string name="repeat_password">Please repeat the password.</string>
    <string name="permission_role">Permission role:</string>
    <string name="role_administrator">Administrator</string>
    <string name="role_regular_user">Regular user</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_delete">DELETE</string>
    <!-- form error -->
    <string name="err_name_exist">Username already exists.</string>
    <string name="err_username_null">Username can\'t be empty.</string>
    <string name="err_username_length">Username\'s length is &gt; 3 and &lt; 19.</string>
    <string name="err_pwd_null">Password can\'t be empty.</string>
    <string name="err_pwd_length">Password\'s length is &gt; 3 and &lt; 19.</string>
    <string name="err_pwd_not_equal">Inconsistent passwords!</string>
    <string name="err_pwd_equal">New password can\'t be same as old. </string>
    <string name="err_pwd_old">Old password is incorrect.</string>
    <string name="err_role_uncheck">Please select a role.</string>
    <!-- user management result -->
    <string name="result_success_create_user">Successfully added user!</string>
    <string name="result_fail_create_user">Failed to add user. </string>
    <string name="result_success_modify_user">Successfully modified user!</string>
    <string name="result_fail_modify_user">Failed to modify user. </string>
    <string name="result_success_delete_user">Successfully deleted user!</string>
    <string name="result_fail_delete_user">Failed to delete user. </string>
    <string name="result_success_change_pwd">Successfully changed password!</string>
    <string name="result_fail_change_pwd">Failed to delete user. </string>
    <string name="err_select_user">Please select a user from above.</string>
    <!-- token -->
    <string name="ui_type_TCC">TCC</string>
    <string name="ui_type_KCT">KCT</string>
    <string name="ui_hint_meter_number">Please input token-string.</string>
    <string name="ui_btn_query">QUERY</string>
    <string name="ui_btn_export_excel">EXPORT</string>
    <string name="ui_hint_file_selector">Click to select a local excel file.</string>
    <string name="ui_btn_import_file">SAVE</string>
    <string name="ui_link_query_format">Query Format</string>
    <string name="ui_link_import_format">Import Format</string>
    <string name="ui_tb_head_meter_num">Meter Number</string>
    <string name="ui_tb_head_token">Token</string>
    <string name="ui_tb_title">TOKEN LIST</string>
    <string name="ui_toast_query_format">When Multi Meter Query is selected,\nFormat is XXXXXXXXXXXXX,XXXXXXXXXXXXX,XXXXXXXXXXXXX\nWhen Range Query is selected,\nFormat is XXXXXXXXXXXXX-XXXXXXXXXXXXX</string>
    <string name="ui_toast_txt_import_format">The import format is shown on the left\nThere are 2 columns in total, one is the meter number\nand the other is token
</string>
    <string name="result_success_kct_meter_str">Successfully queried KCT-tokens</string>
    <string name="result_fail_kct_meter_str">No KCT tokens of this meter-string.</string>
    <string name="result_success_tcc_meter_str">Successfully queried TCC-tokens.</string>
    <string name="result_fail_tcc_meter_str">No TCC tokens of this meter-string.</string>
    <string name="result_fail_blank_meter_str">TokenString cannot be empty.</string>
    <string name="result_fail_blank_type">Please select a token type.</string>
</resources>