<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_management"
            android:icon="@drawable/ic_menu_management"
            android:title="@string/menu_management" />
        <item
            android:id="@+id/nav_token_browser"
            android:icon="@drawable/ic_menu_tokenlist"
            android:title="@string/menu_token_reading" />
        <item
            android:id="@+id/nav_token_import"
            android:icon="@drawable/ic_menu_tokenimport"
            android:title="@string/menu_token_import" />
    </group>
</menu>