<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.laowang.logindemo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_management"
        android:name="com.laowang.logindemo.ui.management.MngFragment"
        android:label="@string/menu_management"
        tools:layout="@layout/fragment_management" />

    <fragment
        android:id="@+id/nav_token_browser"
        android:name="com.laowang.logindemo.ui.token.TokenReadFragment"
        android:label="@string/menu_token_reading"
        tools:layout="@layout/fragment_tokenread" />
</navigation>