<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:background="@color/tab_card_background"
    tools:context=".ui.management.PlaceholderFragment">
    <!-- section label -->
    <TextView
        android:id="@+id/section_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/transparent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:text="@string/hello_name"/>
    <!-- selected user -->
    <EditText
        android:id="@+id/section_username_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_username"
        android:autofillHints="@string/select_username"
        android:inputType="text"
        android:background="@color/disabled_color"
        android:selectAllOnFocus="true"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_label"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <!-- new user -->
    <EditText
        android:id="@+id/section_username_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_username"
        android:autofillHints="@string/new_username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_username_selected"
        android:layout_marginTop="@dimen/activity_vertical_margin" />
    <!-- old password -->
    <EditText
        android:id="@+id/section_password_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:autofillHints="@string/old_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_username_new"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <!-- new password -->
    <EditText
        android:id="@+id/section_password_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:autofillHints="@string/new_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_password_old"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <!-- repeat password -->
    <EditText
        android:id="@+id/section_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password"
        android:autofillHints="@string/repeat_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_password_new"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <!-- privilege level 1-administrator 0-regular user-->
    <TextView
        android:id="@+id/section_permission_span"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/permission_role"
        android:textSize="20sp"
        android:autofillHints="@string/permission_role"
        android:textColorHint="@color/teal_700"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/section_password_repeat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <!-- radio group -->
    <RadioGroup
        android:id="@+id/section_permission_role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:autofillHints="@string/permission_role"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/section_permission_span">
        <RadioButton
            android:id="@+id/section_administrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/role_administrator"
            android:autofillHints="@string/role_administrator" />
        <RadioButton
            android:id="@+id/section_regular_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/role_regular_user"
            android:autofillHints="@string/role_regular_user" />
    </RadioGroup>
    <!-- confirm button -->
    <Button
        android:id="@+id/section_btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
    <!-- delete button -->
    <Button
        android:id="@+id/section_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>
    <!-- cancel button -->
    <Button
        android:id="@+id/section_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
</androidx.constraintlayout.widget.ConstraintLayout>